Responsiveness added, new songs addes, new UI updated

--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify -Your favourate music is here</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <nav class="nav-div">
         <div class="left-links">
             <ul>
-                <li class="brand "><img src="/logo.png" alt="Spotify-Logo">Spotify</li>
-                <li>Home</li>
-                <li>About</li>
+                <li class="brand"><img
+                        src="./Assets//Images/spotify-white-icon.webp"
+                        alt="Spotify-Logo"><span>Spotify</span>
+                </li>
+                <!-- <li class="navbar-links">Home</li>
+                <li class="navbar-links">About</li> -->
             </ul>
         </div>
 
         <div class="right-links">
-            <a class="logo1" href="https://www.instagram.com/?hl=en"><img width="30px" src="/Instagram_logo.png" alt=""></a>
-            <a class="logo2" href="https://www.linkedin.com/in/gajanan-joshi-6493b6222"><img width="30px" src="/IN logo.png" alt=""></a>
+            <a class="logo1 social-media-icons" href="https://www.instagram.com/?hl=en"><img width="30px"
+                    src="./Assets//Images/insta-logo.jpg" alt=""></a>
+            <a class="logo2 social-media-icons" href="https://www.linkedin.com/in/gajanan-joshi-6493b6222"><img
+                    width="30px" src="./Assets//Images/linkedin-icon.png" alt=""></a>
         </div>
     </nav>
     <!-- End of nav features -->
@@ -30,53 +35,89 @@
             <h1 class="NCS">Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="/1.jpeg" alt="1">
-                    <span>Gulabi-Saddi</span>
-                    <span class="songlistplay"><span class="timeStamp"> 03:40 <i id="0" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/1.jpeg" alt="1">
+                    <span>Gulabi Saddi</span>
+                    <span class="songlistplay"><span class="timeStamp"> 03:40 <i id="0"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                
+                <div class="songItem">
+                    <img src="./Assets/Images/2.jpg" alt="1">
+                    <span>Arambha Hai Prachand</span>
+                    <span class="songlistplay"><span class="timeStamp"> 04:57 <i id="1"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="/2.jpg" alt="1">
-                    <span>Arambha-Hai-Prachand</span>
-                    <span class="songlistplay"><span class="timeStamp"> 04:57 <i id="1" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/3.jpg" alt="1">
+                    <span>Sam Dam Dandh Bhed</span>
+                    <span class="songlistplay"><span class="timeStamp"> 03:30 <i id="2"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="/3.jpg" alt="1">
-                    <span>Sam-Dam-Dandh-Bhed</span>
-                    <span class="songlistplay"><span class="timeStamp"> 03:30 <i id="2" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/maula-maula.jpg" alt="1">
+                    <span>Maula Maula</span>
+                    <span class="songlistplay"><span class="timeStamp"> 03:34 <i id="3"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="/4.jpg" alt="1">
-                    <span>Maula-Maula</span>
-                    <span class="songlistplay"><span class="timeStamp"> 03:34 <i id="3" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/5.jpg" alt="1">
+                    <span>Aale Maratha</span>
+                    <span class="songlistplay"><span class="timeStamp"> 04:39 <i id="4"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="/5.jpg" alt="1">
-                    <span>Aale-Maratha</span>
-                    <span class="songlistplay"><span class="timeStamp"> 04:39 <i id="4" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/6.jpg" alt="1">
+                    <span>Jalwa Re Jalwa</span>
+                    <span class="songlistplay"><span class="timeStamp"> 04:35 <i id="5"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <!-- --------------------------------------------------- -->
+                <div class="songItem">
+                    <img src="./Assets/Images/milne-mujhse-aayi.jpg" alt="1">
+                    <span>Milne hai mujhse aayi</span>
+                    <span class="songlistplay"><span class="timeStamp"> 03:41 <i id="6"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="/6.jpg" alt="1">
-                    <span>Jalwa-Re-Jalwa</span>
-                    <span class="songlistplay"><span class="timeStamp"> 04:35 <i id="5" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                    <img src="./Assets/Images/tu-jo-mila.jpg" alt="1">
+                    <span>Tu jo mila</span>
+                    <span class="songlistplay"><span class="timeStamp"> 04:18 <i id="7"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="./Assets/Images/besabariya.jpg" alt="1">
+                    <span>Besabariyaan</span>
+                    <span class="songlistplay"><span class="timeStamp"> 03:30 <i id="8"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="./Assets/Images/bol-do-na-zara.jpg" alt="1">
+                    <span>Bol do na zara</span>
+                    <span class="songlistplay"><span class="timeStamp"> 04:04 <i id="9"
+                                class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
             </div>
         </div>
-        <div class="songBanner"></div>
     </div>
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
+        <div class="songInfo">
+            <!-- The Artist name is only for Memory purpose -->
+            <div class="music-name-holder">
+                <span id="masterSongName">Gulabi Saddi - Gajanan Joshi 😁</span>
+                <img src="./Assets/Images/music.gif" width="50px" alt="" id="gif" />
+            </div>
+
+            <input class="range" type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
+        </div>
         <div class="icons">
-            <!-- Font awesome fonts -->
             <i class="fa-solid fa-backward-fast" id="previous"></i>
             <i class="fa-solid fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-forward-fast" id="next"></i>
         </div>
-        <div class="songInfo">
-            <!-- The Artist name is only for Memory purpose -->
-            <img src="/music.gif" width="50px" alt="" id="gif"><span id="masterSongName"> Gulabi Saddi - Gajanan Joshi 😁  </span> </div>
+
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <script src="https://kit.fontawesome.com/548f4a9401.js" crossorigin="anonymous"></script>
 
 </body>
